@@ -29,7 +29,6 @@ import org.apache.cayenne.map.DbEntity;
 import org.apache.cayenne.map.ObjEntity;
 import org.apache.cayenne.query.ObjectIdQuery;
 import org.apache.cayenne.query.Query;
-import org.apache.cayenne.query.Select;
 import org.apache.cayenne.reflect.ClassDescriptor;
 import org.apache.cayenne.reflect.PropertyDescriptor;
 import org.apache.cayenne.reflect.PropertyUtils;
@@ -472,18 +471,6 @@ public class Cayenne {
         }
 
         return objects.get(0);
-    }
-
-    /**
-     * Returns an object or a DataRow that is a result of a given query. If
-     * query returns more than one object, an exception is thrown. If query
-     * returns no objects, null is returned.
-     * 
-     * @since 3.2
-     */
-    @SuppressWarnings("unchecked")
-    public static <T> T objectForSelect(ObjectContext context, Select<T> query) {
-        return (T) objectForQuery(context, query);
     }
 
     static ObjectId buildId(ObjectContext context, String objEntityName, Object pk) {
