@@ -13,8 +13,9 @@ Date:
 ----------------------------------
 Changes/New Features:
 
-CAY-1842  Remove Listeners support from the Modeler 
-CAY-1845  Upgrade javadoc plugin to 2.9.1 
+CAY-1842 Remove Listeners support from the Modeler 
+CAY-1845 Upgrade javadoc plugin to 2.9.1 
+CAY-1848 New method: ObjectContext.selectOne(Select query) 
 
 Bug Fixes:
 
